# companies-house-streaming-etl

./: .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile-pullrequest  Makefile  README.md  pyproject.toml  requirements.txt
companies_house_streaming_etl/: __init__.py  settings.toml
companies_house_streaming_etl/local_config/: __init__.py  local_conf.py
companies_house_streaming_etl/streamer/: credstash_loader.py  stream.py  view_hudi_data.py
tests/integration/: __init__.py
tests/unit/: __init__.py
